force-app/log/default/objects/zak_Log__c/zak_Log__c.object-meta.xml
<CustomObject>
    <description>Persistent storage for zak_LogEvent events. Captured by zak_Log trigger filtered by setting in zak_Settings.</description>
    <label>Log</label>
    <nameField>
        <label>Subject</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>