force-app/log/default/objects/zak_Log__c/fields/Payload__c.field-meta.xml
<CustomField>
    <fullName>Payload__c</fullName>
    <description>Any information allowing to link log record with data processed. It could be JSON payload or serialised string of SObjects or list of IDs or just free form text describing context.</description>
    <label>Payload</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>