force-app/log/default/objects/zak_Log__c/fields/RecordId__c.field-meta.xml
<CustomField>
    <fullName>RecordId__c</fullName>
    <description>RecordId from the event.</description>
    <label>RecordId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>