force-app/log/default/objects/zak_Log__c/fields/StackTrace__c.field-meta.xml
<CustomField>
    <fullName>StackTrace__c</fullName>
    <description>Content of StackTrace field from the event.</description>
    <label>StackTrace</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>