force-app/log/default/objects/zak_Log__c/fields/TimeMillis__c.field-meta.xml
<CustomField>
    <fullName>TimeMillis__c</fullName>
    <description>TimeMillis from the event.</description>
    <label>TimeMillis</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>