force-app/log/default/objects/zak_Log__c/fields/Topic__c.field-meta.xml
<CustomField>
    <fullName>Topic__c</fullName>
    <description>Topic from the event.</description>
    <label>Topic</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ERR</fullName>
                <default>true</default>
                <label>ERR</label>
            </value>
            <value>
                <fullName>WARN</fullName>
            </value>
            <value>
                <fullName>INFO</fullName>
            </value>
            <value>
                <fullName>PERF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>